# lambda-powertools-reference

./: .bandit  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  app.py  cdk.json  pyproject.toml  requirements.in  requirements.txt  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-audit.yml  docs.yml
docs/: api.html  api.rst  cdk_stack.md  conf.py  generate_openapi.py  hello_world_frontend_stack.md  hello_world_waf_stack.md  index.md  lambda_handler.md  nag_utils.md
frontend/: index.html
hello_world/: hello_world_app.py  hello_world_frontend_stack.py  hello_world_stack.py  hello_world_waf_stack.py  nag_utils.py
lambda/: app.py  requirements.in  requirements.txt
scripts/: generate_openapi.py
tests/: conftest.py  requirements.in  requirements.txt
tests/cdk/: test_stacks.py
tests/integration/: test_api_gateway.py  test_frontend.py
tests/unit/: test_handler.py  test_stacks.py
